Revising the measure system and nomenclature