@@ -7,6 +7,7 @@ package minerful.concept.constraint;
 import java.beans.PropertyChangeListener;
 import java.beans.PropertyChangeSupport;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
@@ -34,44 +35,8 @@ import minerful.io.encdec.TaskCharEncoderDecoder;
 @XmlSeeAlso({RelationConstraint.class,ExistenceConstraint.class})
 @XmlAccessorType(XmlAccessType.FIELD)
 public abstract class Constraint implements Comparable<Constraint> {
-	@XmlTransient
-    public static final double MIN_SUPPORT = 0;
-	@XmlTransient
-    public static final double MAX_SUPPORT = 1.0;
-	@XmlTransient
-	public static final double DEFAULT_SUPPORT = MAX_SUPPORT;
-	@XmlTransient
-	public static final double MIN_INTEREST_FACTOR = MIN_SUPPORT;
-	@XmlTransient
-	public static final double MAX_INTEREST_FACTOR = MAX_SUPPORT;
-	@XmlTransient
-	public static final double DEFAULT_INTEREST_FACTOR = MIN_INTEREST_FACTOR;
-	@XmlTransient
-	public static final double MIN_CONFIDENCE = MIN_SUPPORT;
-	@XmlTransient
-	public static final double MAX_CONFIDENCE = MAX_SUPPORT;
-	@XmlTransient
-	public static final double DEFAULT_CONFIDENCE = MIN_CONFIDENCE;
-	@XmlTransient
-    public static final double MIN_FITNESS = 0;
-	@XmlTransient
-    public static final double MAX_FITNESS = 1.0;
-	@XmlTransient
-	public static final double DEFAULT_FITNESS = MAX_FITNESS;
-	@XmlTransient
-    public static final double RANGE_FOR_SUPPORT = (MAX_SUPPORT - MIN_SUPPORT);
 	@XmlIDREF
     protected TaskCharSet base;
-	@XmlElement
-	protected double support;
-	@XmlElement
-	protected double confidence;
-	@XmlElement
-	protected double interestFactor;
-	@XmlElement
-	protected Double fitness;
-	@XmlAttribute
-	protected boolean evaluatedOnLog = false;
 	@XmlTransient
 	public final String type = this.getClass().getCanonicalName().substring(this.getClass().getCanonicalName().lastIndexOf('.') +1);
 	@XmlAttribute
@@ -83,14 +48,10 @@ public abstract class Constraint implements Comparable<Constraint> {
 	 */
 	@XmlAttribute
 	protected boolean forbidden = false;
-	@XmlAttribute
-	protected boolean belowSupportThreshold = false;
-	@XmlAttribute
-	protected boolean belowConfidenceThreshold = false;
-	@XmlAttribute
-	protected boolean belowInterestFactorThreshold = false;
-	@XmlAttribute
-	private boolean belowFitnessThreshold = false;
+	@XmlElement(name="eventBasedMeasures")
+	protected ConstraintMeasuresManager evtBasedMeasures = new ConstraintMeasuresManager();
+	@XmlElement(name="traceBasedMeasures")
+	protected ConstraintMeasuresManager trcBasedMeasures = new ConstraintMeasuresManager();
 	@XmlTransient
     protected Constraint constraintWhichThisIsBasedUpon;
 	@XmlElementWrapper(name="parameters")
@@ -104,74 +65,36 @@ public abstract class Constraint implements Comparable<Constraint> {
 	
 	protected Constraint() {
 		this.parameters = new ArrayList<TaskCharSet>();
-	}
-
-	public Constraint(TaskChar param) {
-		this(param, DEFAULT_SUPPORT);
-	}
-	public Constraint(TaskCharSet param) {
-		this(param, DEFAULT_SUPPORT);
+		this.evtBasedMeasures = new ConstraintMeasuresManager(this, this.pcs);
+		this.trcBasedMeasures = new ConstraintMeasuresManager(this, this.pcs);
 	}
 
 	public Constraint(TaskChar... params) {
-		this(DEFAULT_SUPPORT, params);
-	}
-
-	public Constraint(TaskCharSet... params) {
-		this(DEFAULT_SUPPORT, params);
-	}
-
-    private boolean checkSupport(double support) {
-        if (support < MIN_SUPPORT || support > MAX_SUPPORT) {
-            throw new IllegalArgumentException("Provided support for " + toString() + " out of range: " + support);
-        }
-        return true;
-    }
-    private boolean checkConfidence(double confidence) {
-        if (confidence < MIN_CONFIDENCE || confidence > MAX_CONFIDENCE) {
-            throw new IllegalArgumentException("Provided confidence level for " + toString() + " out of range: " + confidence);
-        }
-        return true;
-    }
-    private boolean checkInterestFactor(double interestFactor) {
-        if (interestFactor < MIN_INTEREST_FACTOR || interestFactor > MAX_INTEREST_FACTOR) {
-            throw new IllegalArgumentException("Provided interest factor for " + toString() + " out of range: " + interestFactor);
-        }
-        return true;
-    }
-    private boolean checkFitness(double fitness) {
-        if (fitness < MIN_FITNESS || fitness > MAX_FITNESS) {
-            throw new IllegalArgumentException("Provided fitness for " + toString() + " out of range: " + fitness);
-        }
-        return true;
-    }
-
-	public Constraint(TaskChar param, double support) {
-		this(support, param);
-	}
-
-	public Constraint(double support, TaskChar... params) {
+		this();
 		this.setSilentToObservers(true);
 		this.base = new TaskCharSet(params[0]);
 		this.parameters = new ArrayList<TaskCharSet>(params.length);
 		for (TaskChar param : params)
 			this.parameters.add(new TaskCharSet(param));
-		this.setSupport(support);
 		this.setSilentToObservers(false);
 	}
 
-    public Constraint(TaskCharSet param, double support) {
-		this(support, param);
-    }
-
-	public Constraint(double support, TaskCharSet... params) {
+	public Constraint(TaskCharSet... params) {
+		this();
 		this.setSilentToObservers(true);
 		this.base = params[0];
 		this.parameters = new ArrayList<TaskCharSet>(params.length);
 		for (TaskCharSet param : params)
 			this.parameters.add(param);
-		this.setSupport(support);
 		this.setSilentToObservers(false);
+	}
+	
+	public ConstraintMeasuresManager getEventBasedMeasures() {
+		return this.evtBasedMeasures;
+	}	
+	
+	public ConstraintMeasuresManager getTraceBasedMeasures() {
+		return this.trcBasedMeasures;
 	}
 
 	@Override
@@ -253,50 +176,6 @@ public abstract class Constraint implements Comparable<Constraint> {
 	public boolean isForbidden() {
 		return this.forbidden;
 	}
-	public boolean isBelowSupportThreshold() {
-		return belowSupportThreshold;
-	}
-	public void setBelowSupportThreshold(boolean belowSupportThreshold) {
-		if (belowSupportThreshold != this.belowSupportThreshold) {
-			boolean oldbelowSupportThreshold = this.belowSupportThreshold;
-			this.belowSupportThreshold = belowSupportThreshold;
-			pcs.firePropertyChange(ConstraintChange.ChangedProperty.BELOW_SUPPORT_THRESHOLD.toString(), oldbelowSupportThreshold, belowSupportThreshold);
-		}
-	}
-
-	public boolean isBelowConfidenceThreshold() {
-		return belowConfidenceThreshold;
-	}
-	public void setBelowConfidenceThreshold(boolean belowConfidenceThreshold) {
-		if (belowConfidenceThreshold != this.belowConfidenceThreshold) {
-			boolean oldbelowConfidenceThreshold = this.belowConfidenceThreshold;
-			this.belowConfidenceThreshold = belowConfidenceThreshold;
-			pcs.firePropertyChange(ConstraintChange.ChangedProperty.BELOW_CONFIDENCE_THRESHOLD.toString(), oldbelowConfidenceThreshold, belowConfidenceThreshold);
-		}
-	}
-
-	public boolean isBelowInterestFactorThreshold() {
-		return belowInterestFactorThreshold;
-	}
-	public void setBelowInterestFactorThreshold(boolean belowInterestFactorThreshold) {
-		if (belowInterestFactorThreshold != this.belowInterestFactorThreshold) {
-			boolean oldbelowInterestFactorThreshold = this.belowInterestFactorThreshold;
-			this.belowInterestFactorThreshold = belowInterestFactorThreshold;			
-			pcs.firePropertyChange(ConstraintChange.ChangedProperty.BELOW_INTEREST_FACTOR_THRESHOLD.toString(), oldbelowInterestFactorThreshold, belowInterestFactorThreshold);
-		}
-	}
-
-	public boolean isBelowFitnessThreshold() {
-		return belowFitnessThreshold;
-	}
-	public void setBelowFitnessThreshold(boolean belowFitnessThreshold) {
-		if (belowFitnessThreshold != this.belowSupportThreshold) {
-			boolean oldbelowFitnessThreshold = this.belowFitnessThreshold;
-
-			this.belowFitnessThreshold = belowFitnessThreshold;
-			pcs.firePropertyChange(ConstraintChange.ChangedProperty.BELOW_FITNESS_THRESHOLD.toString(), oldbelowFitnessThreshold, belowFitnessThreshold);
-		}
-	}
 
 	public void setRedundant(boolean redundant) {
 		if (this.redundant != redundant) {
@@ -321,141 +200,21 @@ public abstract class Constraint implements Comparable<Constraint> {
 			pcs.firePropertyChange(ConstraintChange.ChangedProperty.FORBIDDEN.toString(), oldforbidden, forbidden);
 		}
 	}
-	
-	public double getSupport() {
-		return support;
-	}
-	public void setSupport(double support) {
-		if (this.support != support) {
-			this.checkSupport(support);
-			double oldSupport = this.support;
-			this.support = support;
-			pcs.firePropertyChange(ConstraintChange.ChangedProperty.SUPPORT.toString(), oldSupport, support);
-		}
-	}
-
-	public double getConfidence() {
-		return confidence;
-	}
-	public void setConfidence(double confidence) {
-		if (this.confidence != confidence) {
-			this.checkConfidence(confidence);
-			double oldConfidence = this.confidence;
-			this.confidence = confidence;
-			pcs.firePropertyChange(ConstraintChange.ChangedProperty.CONFIDENCE.toString(), oldConfidence, confidence);
-		}
-	}
-
-	public double getInterestFactor() {
-		return interestFactor;
-	}
-	public void setInterestFactor(double interestFactor) {
-		if (this.interestFactor != interestFactor) {
-			this.checkInterestFactor(interestFactor);
-			double oldInterestFactor = this.interestFactor;
-			this.interestFactor = interestFactor;
-			pcs.firePropertyChange(ConstraintChange.ChangedProperty.INTEREST_FACTOR.toString(), oldInterestFactor, interestFactor);
-		}
-	}
-
-	public Double getFitness() {
-		return fitness;
-	}
-	public void setFitness(double fitness) {
-		if (this.fitness == null || this.fitness != fitness) {
-			this.checkFitness(fitness);
-			double oldFitness = this.fitness;
-			this.fitness = fitness;
-			pcs.firePropertyChange(ConstraintChange.ChangedProperty.FITNESS.toString(), oldFitness, fitness);
-		}
-	}
 
 	public boolean isEvaluatedOnLog() {
-		return evaluatedOnLog;
+		return evtBasedMeasures.evaluatedOnLog;
 	}
 	public void setEvaluatedOnLog(boolean evaluatedOnLog) {
-		if (this.evaluatedOnLog != evaluatedOnLog) {
-			boolean oldEvaluatedOnLog = this.evaluatedOnLog;
-			this.evaluatedOnLog = evaluatedOnLog;
+		if (this.evtBasedMeasures.evaluatedOnLog != evaluatedOnLog) {
+			boolean oldEvaluatedOnLog = this.evtBasedMeasures.evaluatedOnLog;
+			this.evtBasedMeasures.evaluatedOnLog = evaluatedOnLog;
 			pcs.firePropertyChange(ConstraintChange.ChangedProperty.EVALUATED_ON_LOG.toString(), oldEvaluatedOnLog, evaluatedOnLog);
 		}
 	}
 
-	/**
-     * Returns <code>true</code> if and only if the {@link #support support} of this constraint is equal to or higher than the given threshold.
-	 * @param threshold The threshold to which the {@link #support support} of this constraint is compared
-     * @return <code>true</code> if the {@link #support support} of this constraint is equal to or higher than the given threshold, <code>false</code> otherwise.
-	 */
-    public boolean hasSufficientSupport(double threshold) {
-    	return this.support >= threshold;
-    }
-	/**
-     * Returns <code>true</code> if and only if the {@link #confidence confidence} of this constraint is equal to or higher than the given threshold.
-	 * @param threshold The threshold to which the {@link #confidence confidence} of this constraint is compared
-     * @return <code>true</code> if the {@link #confidence confidence} of this constraint is equal to or higher than the given threshold, <code>false</code> otherwise.
-	 */
-    public boolean hasSufficientConfidence(double threshold) {
-    	return this.confidence >= threshold;
-    }
-	/**
-     * Returns <code>true</code> if and only if the {@link #interestFactor interest factor} of this constraint is equal to or higher than the given threshold.
-	 * @param threshold The threshold to which the {@link #interestFactor interest factor} of this constraint is compared
-     * @return <code>true</code> if the {@link #interestFactor interestFactor} of this constraint is equal to or higher than the given threshold, <code>false</code> otherwise.
-	 */
-    public boolean hasSufficientInterestFactor(double threshold) {
-    	return this.interestFactor >= threshold;
-    }
-    public boolean isAboveThresholds() {
-    	return !( this.belowSupportThreshold || this.belowConfidenceThreshold || this.belowInterestFactorThreshold);
-    }
-
-    public boolean hasReasonableSupport(double threshold) {
-        return	(
-        			(threshold == MAX_SUPPORT)
-        		?	(support - threshold == 0)
-				:		Math.abs(this.getRelativeSupport(threshold)) >= MIN_SUPPORT
-        			&&	Math.abs(this.getRelativeSupport(threshold)) <= MAX_SUPPORT
-        );
-    }
-
-    public double getRelativeSupport(double threshold) {
-        if (MAX_SUPPORT - threshold == 0) {
-            if (support - threshold == 0) {
-                return MAX_SUPPORT;
-            } else {
-                return MIN_SUPPORT;
-            }
-        }
-        return ((support - threshold) / (MAX_SUPPORT - threshold));
-    }
-
-    /**
-     * Returns the difference between {@link #MAX_SUPPORT MAX_SUPPORT} and the given support. 
-     * @param support The support to complement
-     * @return The difference between {@link #MAX_SUPPORT MAX_SUPPORT} and the given support.
-     */
-    public static double complementSupport(double support) {
-        return MAX_SUPPORT - support;
-    }
-
     public int getHierarchyLevel() {
         return 0;
     }
-    
-    /**
-     * Returns <code>true</code> if and only if the {@link #support support} of this constraint is equal to {@link #MAX_SUPPORT MAX_SUPPORT}.
-     * @return <code>true</code> if the support of this constraint is equal to {@link #MAX_SUPPORT MAX_SUPPORT}, <code>false</code> otherwise.
-     */
-    public boolean hasMaximumSupport() {
-    	return this.support == MAX_SUPPORT;
-    }
-    /**
-     * Returns <code>true</code> if and only if the {@link #support support} of this constraint is equal to {@link #MIN_SUPPORT MIN_SUPPORT}.
-     * @return <code>true</code> if the support of this constraint is equal to {@link #MIN_SUPPORT MIN_SUPPORT}, <code>false</code> otherwise.
-     */
-	public boolean hasLeastSupport() {
-		return this.support == MIN_SUPPORT;
-	}
     
     public String getTemplateName() {
     	return MetaConstraintUtils.getTemplateName(this);
@@ -507,6 +266,13 @@ public abstract class Constraint implements Comparable<Constraint> {
 		return String.format(this.getLTLpfExpressionTemplate(), this.base.toLTLpfString());
 	}
 	
+	/**
+	 * Reverses the order of parameters ()
+	 */
+	protected void reverseOrderOfParams() {
+		Collections.reverse(this.parameters);
+	}
+	
 	public abstract TaskCharSet getImplied();
 
 	public abstract String getRegularExpressionTemplate();
@@ -522,7 +288,7 @@ public abstract class Constraint implements Comparable<Constraint> {
     public boolean isMoreInformativeThanGeneric() {
         if (!this.hasConstraintToBaseUpon())
             return true;
-        Integer moreReliableThanGeneric = new Double(this.support).compareTo(constraintWhichThisIsBasedUpon.support);
+        Integer moreReliableThanGeneric = Double.valueOf((double)this.evtBasedMeasures.confidence).compareTo(constraintWhichThisIsBasedUpon.evtBasedMeasures.confidence);
         if (moreReliableThanGeneric == 0)
         	return constraintWhichThisIsBasedUpon.isMoreInformativeThanGeneric();
         return (moreReliableThanGeneric > 0);
@@ -610,19 +376,27 @@ public abstract class Constraint implements Comparable<Constraint> {
     public Constraint createConstraintWhichThisShouldBeBasedUpon() {
     	Constraint cns = suggestConstraintWhichThisShouldBeBasedUpon();
 		if (cns != null) {
-			cns.support = this.support;
-			cns.confidence = this.confidence;
-			cns.interestFactor = this.interestFactor;
+			cns.evtBasedMeasures.support = this.evtBasedMeasures.support;
+			cns.evtBasedMeasures.confidence = this.evtBasedMeasures.confidence;
+			cns.evtBasedMeasures.coverage = this.evtBasedMeasures.coverage;
 		}
     	return cns;
     }
+
+    /**
+     * Returns <code>true</code> if this constraint is below thresholds; <code>false</code> otherwise.
+     * @return <code>true</code> if this constraint is below thresholds; <code>false</code> otherwise.
+     */
+	public boolean isBelowThresholds() {
+		return !this.evtBasedMeasures.isAboveThresholds() || !this.trcBasedMeasures.isAboveThresholds();
+	}
 
     /**
      * Returns <code>true</code> if this constraint is redundant, below thresholds, or in conflict with other constraints; <code>false</code> otherwise.
      * @return <code>true</code> if this constraint is redundant, below thresholds, or in conflict with other constraints; <code>false</code> otherwise.
      */
 	public boolean isMarkedForExclusion() {
-		return this.isRedundant() || !this.isAboveThresholds() || this.isConflicting();
+		return this.isRedundant() || !this.evtBasedMeasures.isAboveThresholds() || this.isConflicting();
 	}
 
 
@@ -647,16 +421,16 @@ public abstract class Constraint implements Comparable<Constraint> {
 	}
 	
 	/**
-	 * Resets properties {@link #belowSupportThreshold belowSupportThreshold},
-	 * {@link #belowConfidenceThreshold belowConfidenceThreshold},
-	 * {@link #belowInterestFactorThreshold belowInterestFactorThreshold},
+	 * Resets properties {@link #evtBasedMeasures.belowSupportThreshold belowSupportThreshold},
+	 * {@link #evtBasedMeasures.belowConfidenceThreshold belowConfidenceThreshold},
+	 * {@link #evtBasedMeasures.belowCoverageThreshold belowCoverageThreshold},
 	 * {@link #conflicting conflicting}, {@link #redundant redundant}
 	 * {@link #forbidden forbidden} to their default values.
 	 */
 	public void resetMarks() {
-		this.belowSupportThreshold = false;
-		this.belowConfidenceThreshold = false;
-		this.belowInterestFactorThreshold = false;
+		this.evtBasedMeasures.belowSupportThreshold = false;
+		this.evtBasedMeasures.belowConfidenceThreshold = false;
+		this.evtBasedMeasures.belowCoverageThreshold = false;
 		this.conflicting = false;
 		this.redundant = false;
 		this.forbidden = false;
